infrastructure/galasa-kube1/galasa-service1/namespace.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#
apiVersion: v1
kind: Namespace
metadata:
  name: galasa-service1
