infrastructure/galasa-kube1/galasa-service1/galasa-service2-gateway.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: service2-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
  - name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: service2-tls-secret
          kind: Secret
          group: ""
